--- a/res/layout/layout_splash.xml
+++ b/res/layout/layout_splash.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_current_picture"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="@dimen/dd_dimen_20px"
         android:text="好手帮"
         android:textColor="@color/common_white"
         android:textSize="@dimen/dd_dimen_46px" />
