--- a/res/layout/activity_helppassengers.xml
+++ b/res/layout/activity_helppassengers.xml
@@ -12,15 +12,14 @@
     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"     android:background="@color/common_white" 
+        android:layout_height="wrap_content"
         android:layout_below="@id/title" >
 
         <RelativeLayout
             android:id="@+id/relativeLayout9"
             android:layout_width="fill_parent"
-            android:layout_height="@dimen/dd_dimen_130px"
-            android:layout_marginTop="@dimen/dd_dimen_20px"
-       >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dd_dimen_20px" >
 
             <TextView
                 android:id="@+id/iv_seting_newsremind"
@@ -31,7 +30,8 @@
                 android:gravity="center_vertical"
                 android:text="我要发布长期订单"
                 android:textColor="@color/common_text"
-                android:textSize="@dimen/dd_dimen_32px" />
+                android:textSize="@dimen/dd_dimen_32px"
+                android:visibility="gone" />
 
             <CheckBox
                 android:id="@+id/cb_seting_shoushi"
@@ -42,8 +42,17 @@
                 android:layout_marginRight="@dimen/dd_dimen_25px"
                 android:background="@drawable/switch_selecor"
                 android:button="@null"
-                android:gravity="center_vertical" />
+                android:gravity="center_vertical"
+                android:visibility="gone" />
+
+            <com.cgzz.job.b.view.TitleBarView
+                android:id="@+id/title_bar"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/dd_dimen_10px" />
         </RelativeLayout>
+
         <TextView
             android:id="@+id/iv_seting_newsremind2"
             android:layout_width="fill_parent"
@@ -52,13 +61,12 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dd_dimen_40px"
             android:layout_marginRight="@dimen/dd_dimen_40px"
-            android:layout_marginTop="@dimen/dd_dimen_5px"
-                 android:paddingBottom="@dimen/dd_dimen_30px"
-            android:gravity="center_vertical"
-            android:text="长期订单意味着可以在固定时段内（最长7天）使用稳定的帮客上门从事客房清洁服务"
-            android:textColor="@color/common_message"
+            android:layout_marginTop="@dimen/dd_dimen_20px"
+            android:gravity="center"
+            android:paddingBottom="@dimen/dd_dimen_30px"
+            android:text="可在固定时段内(最长7天)使用稳定的帮客"
+            android:textColor="#9c9c9c"
             android:textSize="@dimen/dd_dimen_24px" />
-
     </RelativeLayout>
 
     <com.cgzz.job.b.view.ReboundScrollView
