--- a/res/layout/fragment_wancheng_item.xml
+++ b/res/layout/fragment_wancheng_item.xml
@@ -139,6 +139,7 @@
                 <TextView
                     android:id="@+id/tv_current_quxiao"
                     android:layout_width="wrap_content"
+                    android:visibility="gone"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" android:gravity="center_vertical"
                     android:singleLine="true"
