--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -34,4 +34,8 @@
     <color name="common_ec5050">#ec5050</color>
     <color name="common_aedd43">#aedd43</color>
 <color name="common_00000000">#00000000</color> 
+<color name="common_383838">#383838</color>
+
+
+<color name="common_454545">#454545</color>
 </resources>
